# threelayeredstructure

./: CMakeLists.txt  README.md  calculate_unknown_diffusivity.cpp  calculate_unknown_diffusivity.h  import.h  main.cpp  parameters.txt  pch.h  read_parameters.cpp  read_parameters.h  sample_parameters.h
